--- a/HomeworkView/Views/BookKeeping/Index.cshtml
+++ b/HomeworkView/Views/BookKeeping/Index.cshtml
@@ -82,6 +82,7 @@
                         <th>類別</th>
                         <th>日期</th>
                         <th>金額</th>
+                        <th></th>
                     </tr>
 
 @{ int count = 1;}
@@ -99,6 +100,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Amout)
+        </td>
+        <td>
+            @Html.ActionLink("Details", "Details", new { id = item.ID }) | @Html.ActionLink("Edit", "Edit", new { id = item.ID })
         </td>
     </tr>
 }                  
